git-svn-id: https://svn.kapsi.fi/jpa/dsoquad/pawn@1128 e3a754e5-d11d-0410-8d38-ebb782a927b9

--- a/Runtime/Makefile
+++ b/Runtime/Makefile
@@ -9,7 +9,8 @@ OBJS = main.o ds203_io.o libc_glue.o drawing.o menubar.o buttons.o \
 	file_selector.o msgbox.o metadata.o debug.o \
 	fatfs_glue.o ff.o \
 	amx.o amxexec.o amxaux.o amx_debug.o \
-	amx_draw.o amx_core.o amx_string.o amx_fixed.o amx_wavein.o amx_menu.o \
+	amx_draw.o amx_core.o amx_string.o amx_fixed.o amx_wavein.o \
+	amx_waveout.o amx_menu.o \
 	fix16.o fix16_sqrt.o fix16_trig.o fix16_exp.o
 
 # Linker script (choose which application position to use)
@@ -34,7 +35,7 @@ OD      = arm-none-eabi-objdump
 CFLAGS += -mcpu=cortex-m3 -mthumb -mno-thumb-interwork
 
 # Optimization & debug settings
-CFLAGS += -fno-common -Os -ffunction-sections -g -std=gnu99
+CFLAGS += -fno-common -Os -ffunction-sections -g -std=gnu99 -DNDEBUG
 
 # Compiler warnings
 CFLAGS += -Wall -Werror -Wno-unused
