--- a/Runtime/Makefile
+++ b/Runtime/Makefile
@@ -6,11 +6,12 @@ NAME = PAWN_APP
 
 # Names of the object files (add all .c files you want to include)
 OBJS = main.o ds203_io.o libc_glue.o drawing.o menubar.o buttons.o \
-	file_selector.o msgbox.o metadata.o debug.o \
+	file_selector.o msgbox.o metadata.o debug.o sysmenu.o \
 	fatfs_glue.o ff.o \
 	amx.o amxexec.o amxaux.o amx_debug.o \
 	amx_draw.o amx_core.o amx_string.o amx_fixed.o amx_wavein.o \
-	amx_waveout.o amx_menu.o \
+	amx_waveout.o amx_menu.o amx_file.o amx_buttons.o amx_fourier.o \
+	amx_time.o \
 	fix16.o fix16_sqrt.o fix16_trig.o fix16_exp.o
 
 # Linker script (choose which application position to use)
