Updates to the programs

--- a/Programs/Makefile
+++ b/Programs/Makefile
@@ -4,6 +4,9 @@ OBJS = $(SRCS:.pawn=.amx)
 
 all: $(OBJS)
 
+clean:
+	rm -rf $(OBJS)
+
 %.amx: %.pawn ../Compiler/include/*.inc
 	$(PAWNCC) -d2 -v2 -V1 $<
 
